--- a/_config.yml
+++ b/_config.yml
@@ -12,23 +12,20 @@ keep_files:
   - ".git"
   - ".gitignore"
 
-title: "HLC"
-description: "A new private equity International Global Opportunity Fund"
 
-url: "www.happylifecapital.com"
+# Site settings
+title: HLC
+subtitle: "Happy Life Capital"
+url: "www.happylifecapital.com" # the base hostname & protocol for your site
+# baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
 baseurl: ""
+cover: "/assets/cover.png"
+logo: "/assets/logo.png"
 
+# Build settings
 markdown: kramdown
-highlighter: rouge
-gems: [jekyll-paginate]
-paginate: 5
 
-navigation:
- - title: Home
-   url: /index.html
+# Google analytics
+# ga_tracking_id: "UA-XXXX-1"
 
-social:
-   email: Jessy_chao@happylifecapital.com
-   email: Charles_mao@happylifecapital.com
-
-#google_analytics: ""
+# Category descriptions (for archive pages)
