--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,7 @@
 # --- General options --- #
 
-# url is the full website URL
-# baseurl is the website's URL without the hostname
-
-# If you are building a simple GitHub user page (http://username.github.io) then use these settings:
 url: "www.happylifecapital.com"
 baseurl: ""
-
-# If you are building a GitHub project page then use these settings:
-#url: "http://username.github.io/projectname"
-#baseurl: "/projectname"
-
-# Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
 title: Happy Life Capital
@@ -23,14 +13,13 @@ description: Happy Life Capital
 
 # List of links in the navigation bar
 navbar-links:
-  Home: "home"
   About Us: "aboutus"
-  Global Strengths: "#"
-  Clear Focus: "#"
-  Our Team: "#"
-  Regional Offices: "#"
-  Portfolio: "#"
-  Contact: "#"
+  Global Strengths: "adv"
+  Clear Focus: "focus"
+  Our Team: "team"
+  Regional Offices: "offices"
+  Portfolio: "portfolio"
+  Contact: "contact"
   
 
 # Image to show in the navigation bar - image must be a square (width = height)
@@ -47,48 +36,6 @@ avatar: "/img/logo.png"
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: Erin O'Toole
-
-# Select which links to show in the footer
-footer-links-active:
-  rss: false
-  facebook: false
-  email: false
-  twitter: false
-  google-plus: false
-  github: false
-  reddit: false
-  linkedin: false
-  xing: false
-  stackoverflow: false
-  snapchat: false
-  instagram: false
-  youtube: false
-  spotify: false
-  telephone: false
-
-# Select which share links to show in posts
-share-links-active:
-  twitter: false
-  facebook: false
-  google: false
-  linkedin: false
-
-# How to display the link to the website in the footer
-# Remove this if you don't want a link in the footer
-#url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
-
-# --- Misc --- #
-# Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
-
-# Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
-
-# Google Tag Manager ID
-#gtm: ""
-
-# Facebook App ID
-# fb_app_id: ""
 
 # Excerpt Word Length
 # Truncates the excerpt to the specified number of words on the index page
@@ -193,6 +140,3 @@ prose:
 
 gems:
   - jekyll-paginate
-
-# Beautiful Jekyll / Dean Attali
-# 2fc73a3a967e97599c9763d05e564189
