--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: Happy Life Capital
 # List of links in the navigation bar
 navbar-links:
   About Us: "aboutus"
-  Global Strengths: "adv"
+  Global Strengths: "advantage"
   Clear Focus: "focus"
   Our Team: "team"
   Regional Offices: "offices"
