--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ navbar-links:
   Global Strengths: "advantage"
   Clear Focus: "focus"
   Our Team: "team"
-  Regional Offices: "offices"
+  Contact Us: "contact"
   Portfolio: "portfolio"
-  Contact: "contact"
+
   
 
 # Image to show in the navigation bar - image must be a square (width = height)
