--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: Happy Life Capital
 # List of links in the navigation bar
 navbar-links:
   About Us: "aboutus"
-  Global Strengths: "advantage"
+  Global Strengths: "global"
   Clear Focus: "focus"
   Our Team: "team"
   Contact Us: "contact"
