--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ navbar-links:
   Global Strengths: "global"
   Clear Focus: "focus"
   Our Team: "team"
-  Contact Us: "contact"
-  Portfolio: "portfolio"
+  Regional Offices: "contact"
+  Contact Us: ""
 
   
 
