--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ navbar-links:
   Clear Focus: "focus"
   Our Team: "team"
   Regional Offices: "contact"
+  Our Triggers: "triggers"
   Contact Us: ""
 
   
