--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ navbar-links:
   Global Strengths: "global"
   Clear Focus: "focus"
   Our Team: "team"
-  Regional Offices: "contact"
+  Regional Offices: "offices"
   Our Triggers: "triggers"
-  Contact Us: ""
+  Contact Us: "contactus"
 
   
 
